k8s/lb-dr/nginx-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-lb-virtualservice
  namespace: demo-istio-lb
spec:
  gateways:
    - demo-istio-lb/nginx-lb-gateway
  hosts:
    - lab.k8s.io
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nginx-lb-service.demo-istio-lb.svc.cluster.local
            subset: v1
          weight: 20
        - destination:
            host: nginx-lb-service.demo-istio-lb.svc.cluster.local
            subset: v2
          weight: 80
